--- a/main/templates/user/content.html
+++ b/main/templates/user/content.html
@@ -15,8 +15,8 @@
 {% block page_cont %}
   <div class="container">
     <a class="btn-floating btn waves-effect waves-light green" href="/add/"><i class="material-icons">+</i></a>
-    <a class="btn-floating btn waves-effect waves-light red" href="/"><i class="material-icons">-</i></a>
-    <a class="btn-floating btn waves-effect waves-light blue" href="/"><i class="material-icons">Up</i></a>
+    <a class="btn-floating btn waves-effect waves-light red" href="/delete"><i class="material-icons">-</i></a>
+    <a class="btn-floating btn waves-effect waves-light blue" href="/edit"><i class="material-icons">Up</i></a>
   </div>
   <div class="row">
 		{% for book in books %}
