--- a/main/templates/user/homepage_li.html
+++ b/main/templates/user/homepage_li.html
@@ -24,7 +24,7 @@
         <ul class="right hide-on-med-and-down">
             <li><a href="/">Accueil</a></li>
             <li><a href="/Contact">Contact</a></li>
-            <li><a href="/Register/">Register</a></li>
+            <li><a href="/Profile">Profile</a></li>
             <li><a href="/logout">Logout</a></li>
 
             <!-- Dropdown Trigger -->
@@ -64,7 +64,7 @@
                 <p>{{cat.category_description}}</p>
             </div>
             <div class="card-action">
-                  <a href="/content_li/page/{{cat.id}}" >See Books</a>
+                  <a href="/content/page/{{cat.id}}" >See Books</a>
             </div>
           </div>
       </div>
