--- a/main/templates/user/homepage_li.html
+++ b/main/templates/user/homepage_li.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  {% csrf_token %}
   <ul id="dropdown1" class="dropdown-content">
       <li><a href="#!">Booking</a></li>
       <li><a href="#!">Create a category</a></li>
