j ai oublie un/

--- a/main/templates/main/add.html
+++ b/main/templates/main/add.html
@@ -1,7 +1,7 @@
 {% extends "main/content_spect.html" %}
 
 {% block addition %}
-	<form method="POST" action="/add">
+	<form method="POST" action="/add/">
 		{% csrf_token %}
 		<div class="row">
     		<div class="input-field col s6">
